--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
     "eslint-config-next": "12.2.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.4",
-    "typescript": "4.7.4"
+    "typescript": "^4.9.5"
   }
 }
